# openGL-learing

./: CMakeLists.txt
include/: camera.h  config.h  mesh.h  model.h  shader.h
src/: camera.cpp  main.cpp  mesh.cpp  model.cpp  shader.cpp  stb_image_loader.cpp
